--- a/FR.html
+++ b/FR.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
 
 <head>
     <title>Wintopia</title>
@@ -50,17 +50,17 @@
         </div>
         <div class="header__buttons">
             <button class="btn-miss"><img src="./img/missions-btn.png" alt="img" width="25"><a
-                    href="/go">Play Now</a></button>
-            <button class="btn-log"><a href="/go">Log In</a></button>
-            <button class="btn-sign"><a href="/go">Sign Up</a></button>
-            <button class="toggle"><img src="img/EN.webp" alt="img" width="35px" height="35px" class="lang">English</button>
+                    href="/go">Jouer maintenant</a></button>
+            <button class="btn-log"><a href="/go">Connexion</a></button>
+            <button class="btn-sign"><a href="/go">Inscription</a></button>
+            <button class="toggle"><img src="img/EN.webp" alt="img" width="35px" height="35px" class="lang">Français</button>
         </div>
         <div class="lang-items">
             <ul class="lang-item">
-                <!-- <li><a href="index.html"><img src="./img/en_CA.png" alt="En" width="20px">English</a></li> -->
+                <li><a href="index.html">English</a></li>
                 <li><a href="GR.html">Ελληνική</a></li>
                 <li><a href="PT.html">Português</a></li>
-                <li><a href="FR.html">Français</a></li>
+                <!-- <li><a href="FR.html"><img src="./img/en_CA.png" alt="En" width="20px">Français</a></li> -->
             </ul>
         </div>
     </header>
@@ -104,11 +104,11 @@
                     <div class="smart-box">
                         <button class="smart-item">
                             <img src="./img/menu/tournaments.webp" alt="img" class="smart-item-img">
-                            Tournaments
+                            Tournois
                         </button>
                         <button class="smart-item">
                             <img src="./img/menu/loyalty.webp" alt="img" class="smart-item-img">
-                            Loyalty
+                            Fidélité
                         </button>
                         <button class="smart-item">
                             <img src="./img/menu/cashback.webp" alt="img" class="smart-item-img">
@@ -116,11 +116,11 @@
                         </button>
                         <button class="smart-item">
                             <img src="./img/menu/wheel.webp" alt="img" class="smart-item-img">
-                            Wheel
+                            Roue
                         </button>
                         <button class="smart-item">
                             <img src="./img/menu/vipclub.webp" alt="img" class="smart-item-img">
-                            VIP club
+                            Club VIP
                         </button>
                         <button class="smart-item">
                             <img src="./img/menu/promotions.webp" alt="img" class="smart-item-img">
@@ -150,7 +150,7 @@
                                     d="M6.343 4.938a1 1 0 0 1 0 1.415 8.003 8.003 0 0 0 0 11.317 1 1 0 1 1-1.415 1.414c-3.906-3.906-3.906-10.24 0-14.146a1 1 0 0 1 1.415 0m12.731 0c3.906 3.907 3.906 10.24 0 14.146a1 1 0 0 1-1.414-1.414 8.003 8.003 0 0 0 0-11.317 1 1 0 0 1 1.414-1.415M9.31 7.812a1 1 0 0 1 0 1.414 3.92 3.92 0 0 0 0 5.544 1 1 0 1 1-1.414 1.414 5.92 5.92 0 0 1 0-8.372 1 1 0 0 1 1.414 0m6.959 0a5.92 5.92 0 0 1 0 8.372 1 1 0 0 1-1.415-1.414 3.92 3.92 0 0 0 0-5.544 1 1 0 0 1 1.415-1.414m-4.187 2.77a1.5 1.5 0 1 1 0 3 1.5 1.5 0 0 1 0-3"
                                     fill="var(--current-color)"></path>
                             </svg>
-                            <p>Live Casino</p>
+                            <p>Casino en direct</p>
                         </div>
                         <div class="title-box__item">
                             <svg width="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg"
@@ -168,7 +168,7 @@
                                     d="M4.08 7.958c-1.184 2.18-2.292 4.412-3.43 6.626a1.97 1.97 0 0 0-.114 1.545c.134.346.367.643.67.857a2.4 2.4 0 0 0 1.079.444 2.68 2.68 0 0 0 2.048-.56l3.923-2.922 8.282 2.22 1.906 4.482a2.68 2.68 0 0 0 1.493 1.51c.367.147.764.2 1.157.155.37-.036.724-.176 1.018-.404a2.02 2.02 0 0 0 .669-1.42c.146-2.49.279-4.973.336-7.466a5.83 5.83 0 0 0-.815-3.458 4.37 4.37 0 0 0-2.602-1.93 4.1 4.1 0 0 0-1.824-.066 4.4 4.4 0 0 0-1.675.66l-1.398-.374.375-1.398c.076-.267.252-.494.492-.633a1 1 0 0 1 .784-.112 1.93 1.93 0 0 0 1.483-.19c.434-.25.758-.655.903-1.135a.46.46 0 1 0-.88-.236 1.07 1.07 0 0 1-1.313.758 1.97 1.97 0 0 0-2.402 1.387l-.389 1.45-1.408-.378a4.4 4.4 0 0 0-1.12-1.41 4.1 4.1 0 0 0-1.613-.853 4.4 4.4 0 0 0-3.187.255A5.9 5.9 0 0 0 4.08 7.958m3.244 1.89L6.288 9.57a.536.536 0 0 1 .278-1.035l1.035.277.278-1.035a.514.514 0 0 1 .616-.356.525.525 0 0 1 .377.622L8.595 9.08l1.035.277a.536.536 0 0 1-.277 1.035l-1.035-.277-.278 1.035a.525.525 0 0 1-.638.351.514.514 0 0 1-.356-.617zm10.218 2.904a.675.675 0 1 1 .37-1.298.675.675 0 0 1-.37 1.298m2.165-.13a.675.675 0 1 1 1.3.37.675.675 0 0 1-1.3-.37m-1.195 1.81a.686.686 0 1 1 .355-1.324.686.686 0 0 1-.355 1.324m.206-3.418a.686.686 0 1 1 1.325.355.686.686 0 0 1-1.325-.355"
                                     fill="var(--current-color)"></path>
                             </svg>
-                            <p>Esports</p>
+                            <p>Jeux électroniques</p>
                         </div>
                         <button class="burger-list__button">
                             <svg width='22' viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg"
@@ -194,7 +194,7 @@
                     <span class="banner__box-title">Πακέτο Καλωσορίσματος</span>
                     <span class="banner__box-h1">€2,000 + <strong>300 Δωρεάν Περιστροφές</strong></span>
                     <div class="banner__box-btn">
-                        <a href="/go"><button class="banner-btn">Sign Up Now</button></a>
+                        <a href="/go"><button class="banner-btn">s'inscrire</button></a>
                     </div>
                 </div>
             </section>
@@ -206,7 +206,7 @@
                         d="M20.8238 21.008C20.8238 21.008 21.4161 20.8714 21.4922 20.5568L22.9054 8.75082L22.9778 8.14614C23.037 7.90332 22.9449 7.64806 22.7457 7.50359C22.5454 7.3585 22.2805 7.35494 22.0791 7.4947L18.7348 9.78825C18.6047 9.87771 18.5143 10.0162 18.4838 10.1744C18.4533 10.3319 18.4849 10.4959 18.5713 10.6298C18.7658 10.9295 18.8689 11.2777 18.8689 11.6377C18.8689 12.6409 18.0756 13.457 17.1004 13.457C16.1252 13.457 15.3319 12.6409 15.3319 11.6377C15.3319 11.0479 15.6145 10.4918 16.0883 10.1495C16.3549 9.95767 16.4194 9.57981 16.2328 9.30562L13.4568 5.22596C13.2357 4.90141 12.7118 4.90141 12.4907 5.22596L9.71472 9.30562C9.52822 9.57981 9.59267 9.95767 9.8592 10.1495C10.333 10.4918 10.6157 11.0479 10.6157 11.6377C10.6157 12.6409 9.82237 13.457 8.84714 13.457C7.87192 13.457 7.07861 12.6409 7.07861 11.6377C7.07861 11.2776 7.18168 10.9294 7.37628 10.6298C7.46262 10.496 7.49428 10.3319 7.46375 10.1744C7.43322 10.0162 7.34283 9.87771 7.21274 9.78825L3.86848 7.4947C3.66585 7.35494 3.40044 7.3585 3.2018 7.50359C3.00263 7.64806 2.91051 7.90332 2.96978 8.14614L4.45529 20.5568C4.52955 20.8636 4.82377 21.0637 5.12369 21.008H20.8238Z"
                         fill="#F6DA24" />
                 </svg>
-                <div class="atr__welcome-info">welcome bonus</div>
+                <div class="atr__welcome-info">Bonus de bienvenue</div>
                 <svg width="25" height="26" viewBox="0 0 25 26" fill="none" xmlns="http://www.w3.org/2000/svg">
                     <path fill-rule="evenodd" clip-rule="evenodd"
                         d="M20.8238 21.008C20.8238 21.008 21.4161 20.8714 21.4922 20.5568L22.9054 8.75082L22.9778 8.14614C23.037 7.90332 22.9449 7.64806 22.7457 7.50359C22.5454 7.3585 22.2805 7.35494 22.0791 7.4947L18.7348 9.78825C18.6047 9.87771 18.5143 10.0162 18.4838 10.1744C18.4533 10.3319 18.4849 10.4959 18.5713 10.6298C18.7658 10.9295 18.8689 11.2777 18.8689 11.6377C18.8689 12.6409 18.0756 13.457 17.1004 13.457C16.1252 13.457 15.3319 12.6409 15.3319 11.6377C15.3319 11.0479 15.6145 10.4918 16.0883 10.1495C16.3549 9.95767 16.4194 9.57981 16.2328 9.30562L13.4568 5.22596C13.2357 4.90141 12.7118 4.90141 12.4907 5.22596L9.71472 9.30562C9.52822 9.57981 9.59267 9.95767 9.8592 10.1495C10.333 10.4918 10.6157 11.0479 10.6157 11.6377C10.6157 12.6409 9.82237 13.457 8.84714 13.457C7.87192 13.457 7.07861 12.6409 7.07861 11.6377C7.07861 11.2776 7.18168 10.9294 7.37628 10.6298C7.46262 10.496 7.49428 10.3319 7.46375 10.1744C7.43322 10.0162 7.34283 9.87771 7.21274 9.78825L3.86848 7.4947C3.66585 7.35494 3.40044 7.3585 3.2018 7.50359C3.00263 7.64806 2.91051 7.90332 2.96978 8.14614L4.45529 20.5568C4.52955 20.8636 4.82377 21.0637 5.12369 21.008H20.8238Z"
@@ -215,53 +215,53 @@
             </div>
         </section>
         <section class="slot">
-            <h2 class="slot__title">Popular Games</h2>
+            <h2 class="slot__title">Jeux populaires</h2>
             <div class="slot__box">
                 <div class="slot__items">
                     <div class="slot__item">
                             <img src="./img/slot/1.webp"  alt="img" class="slot__item-img">
-                            <a href="/go"><button class="btn-overlay">Play Now</button></a>
+                            <a href="/go"><button class="btn-overlay">Jouer maintenant</button></a>
                     </div>
                     <div class="slot__item">
                             <img src="./img/slot/2.webp"  alt="img" class="slot__item-img">
-                            <a href="/go"><button class="btn-overlay">Play Now</button></a>
+                            <a href="/go"><button class="btn-overlay">Jouer maintenant</button></a>
                     </div>
                     <div class="slot__item">
                             <img src="./img/slot/3.webp"  alt="img" class="slot__item-img">
-                            <a href="/go"><button class="btn-overlay">Play Now</button></a>
+                            <a href="/go"><button class="btn-overlay">Jouer maintenant</button></a>
                     </div>
                     <div class="slot__item">
                             <img src="./img/slot/4.webp"  alt="img" class="slot__item-img">
-                            <a href="/go"><button class="btn-overlay">Play Now</button></a>
+                            <a href="/go"><button class="btn-overlay">Jouer maintenant</button></a>
                     </div>
                     <div class="slot__item">
                             <img src="./img/slot/5.webp"  alt="img" class="slot__item-img">
-                            <a href="/go"><button class="btn-overlay">Play Now</button></a>
+                            <a href="/go"><button class="btn-overlay">Jouer maintenant</button></a>
                     </div>
                     <div class="slot__item">
                             <img src="./img/slot/1/1.webp"  alt="img" class="slot__item-img">
-                            <a href="/go"><button class="btn-overlay">Play Now</button></a>
+                            <a href="/go"><button class="btn-overlay">Jouer maintenant</button></a>
                     </div>
                     <div class="slot__item">
                         <img src="./img/slot/1/2.webp"  alt="img" class="slot__item-img">
-                        <a href="/go"><button class="btn-overlay">Play Now</button></a>
+                        <a href="/go"><button class="btn-overlay">Jouer maintenant</button></a>
                     </div>
                     <div class="slot__item">
                         <img src="./img/slot/1/3.webp"  alt="img" class="slot__item-img">
-                        <a href="/go"><button class="btn-overlay">Play Now</button></a>
+                        <a href="/go"><button class="btn-overlay">Jouer maintenant</button></a>
                     </div>
                     <div class="slot__item">
                         <img src="./img/slot/1/4.webp"  alt="img" class="slot__item-img">
-                        <a href="/go"><button class="btn-overlay">Play Now</button></a>
+                        <a href="/go"><button class="btn-overlay">Jouer maintenant</button></a>
                     </div>
                     <div class="slot__item">
                         <img src="./img/slot/1/5.webp"  alt="img" class="slot__item-img">
-                        <a href="/go"><button class="btn-overlay">Play Now</button></a>
+                        <a href="/go"><button class="btn-overlay">Jouer maintenant</button></a>
                     </div>
                 </div>
             </div>
             <div class="banner__box-btn ">
-                <button class="banner-btn slot-btn btn">Sign Up</button>
+                <button class="banner-btn slot-btn btn">Connexion</button>
             </div>
         </section>
         <div class="wrapper-section">
@@ -387,7 +387,7 @@
                     <h2>Συμπεράσματα 🚀✨</h2>
                     <p>Το Wintopia Casino λάμπει λαμπρά στο ζωντανό σύμπαν των online τυχερών παιχνιδιών, προσφέροντας μια ευρεία γκάμα παιχνιδιών, γενναιόδωρα μπόνους και μια ευχάριστη διεπαφή 🌟🎰. Η δέσμευση της πλατφόρμας για ασφάλεια, δικαιοσύνη και υποστήριξη ενισχύει ένα υψηλό επίπεδο εμπιστοσύνης και αφοσίωσης μεταξύ των Ελλήνων παικτών 🛡️💖. Παρόλο που υπάρχουν τομείς προς βελτίωση, η συνολική ποιότητα της πλατφόρμας την επιβεβαιώνει ως μια αστρική επιλογή για όποιον στην Ελλάδα αναζητά εξαιρετική ψυχαγωγία με κορυφαίες ανταμοιβές. Εγγραφείτε τώρα και ξεκινήστε μια κοσμική περιπέτεια!</p>
                     <div class="banner__box-btn ">
-                        <button class="banner-btn btn">Play Now</button>
+                        <button class="banner-btn btn">Jouer maintenant</button>
                     </div>
                 </div>
             </section>
@@ -437,9 +437,9 @@
             </div>
             <div class="footer-link">
                 <a href="/go">Promotions</a>
-                <a href="/go">Responsible Gaming</a>
-                <a href="/go">Terms of servise</a>
-                <a href="/go">Privacy policy</a>
+                <a href="/go">Jeu responsable</a>
+                <a href="/go">Conditions d'emploi</a>
+                <a href="/go">Politique de confidentialité</a>
             </div>
         </div>
         <hr>
@@ -497,12 +497,11 @@
                 </div>
             </div>
             <div class="footer__top-copy">
-                <div class="copy">© 2024 Wintopia Casino | All Rights Reserved</div>
+                <div class="copy">© 2024 Wintopia Casino | Tous droits réservés</div>
             </div>
         </div>
     </footer>
 
-    [[LIST_METRIKA]]
     <script src="js/script.js"></script>
 
 </body>
