--- a/PT.html
+++ b/PT.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt">
 
 <head>
     <title>Wintopia</title>
     <meta charset="UTF-8">
-    <meta name="description" content=" 100% έως και €700 στην πρώτη σας κατάθεσ">
+    <meta name="description" content=" 100% έως και €700 στην πρώτη σας κατάθεσ" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
@@ -22,8 +22,9 @@
         </div>
         <div class="header__left">
             <div class="header__logo-header">
-                <a href="/"> <img src="img/logo.svg" alt="logo" class="logo"></a>
-                <a href="/"><img src="img/logo.svg" alt="logo" class="mob-logo"></a>
+                <a href="/"> <img src="img/logo.svg" alt="logo" class="logo">
+                    <a href="/"> <img src="img/logo.svg" alt="logo" class="mob-logo">
+                </a>
             </div>
             <div class="header__logo-nav">
                 <ul>
@@ -44,22 +45,22 @@
                             <path
                                 d="M12 2C6.477 2 2 6.477 2 12s4.477 10 10 10 10-4.477 10-10S17.523 2 12 2M8.244 4.373l3.008 1.8v2.193l-2.791 2.028-2.044-.707-.587-3.534a8.5 8.5 0 0 1 2.414-1.78m-4.623 9.066 2.327-2.327 2.04.705L9.07 15.15l-.97 1.575-3.293-.194a8.45 8.45 0 0 1-1.186-3.092m6.909 6.934-1.184-2.809.963-1.567h3.372l.912 1.581-1.04 2.78a8.6 8.6 0 0 1-3.023.015m8.362-3.397-3.024-.19-.938-1.624 1.087-3.345 2.013-.696 2.312 2.52a8.5 8.5 0 0 1-1.45 3.335m-.72-10.82-.589 3.533-2.04.705-2.791-2.028V6.172l3.002-1.8a8.5 8.5 0 0 1 2.418 1.784"
                                 fill="var(--current-color)"></path>
-                        </svg>Sports</li>
+                        </svg>Desportos</li>
                 </ul>
             </div>
         </div>
         <div class="header__buttons">
             <button class="btn-miss"><img src="./img/missions-btn.png" alt="img" width="25"><a
-                    href="/go">Play Now</a></button>
-            <button class="btn-log"><a href="/go">Log In</a></button>
-            <button class="btn-sign"><a href="/go">Sign Up</a></button>
-            <button class="toggle"><img src="img/EN.webp" alt="img" width="35px" height="35px" class="lang">English</button>
+                    href="/go">Jogar Agora</a></button>
+            <button class="btn-log"><a href="/go">Entrar</a></button>
+            <button class="btn-sign"><a href="/go">Registar</a></button>
+            <button class="toggle"><img src="img/EN.webp" alt="img" width="35px" height="35px" class="lang">Português</button>
         </div>
         <div class="lang-items">
             <ul class="lang-item">
-                <!-- <li><a href="index.html"><img src="./img/en_CA.png" alt="En" width="20px">English</a></li> -->
+                <li><a href="index.html">English</a></li>
                 <li><a href="GR.html">Ελληνική</a></li>
-                <li><a href="PT.html">Português</a></li>
+                <!-- <li><a href="PT.html"><img src="./img/en_CA.png" alt="En" width="20px">Português</a></li> -->
                 <li><a href="FR.html">Français</a></li>
             </ul>
         </div>
@@ -104,11 +105,11 @@
                     <div class="smart-box">
                         <button class="smart-item">
                             <img src="./img/menu/tournaments.webp" alt="img" class="smart-item-img">
-                            Tournaments
+                            Torneios
                         </button>
                         <button class="smart-item">
                             <img src="./img/menu/loyalty.webp" alt="img" class="smart-item-img">
-                            Loyalty
+                            Fidelidade
                         </button>
                         <button class="smart-item">
                             <img src="./img/menu/cashback.webp" alt="img" class="smart-item-img">
@@ -116,15 +117,15 @@
                         </button>
                         <button class="smart-item">
                             <img src="./img/menu/wheel.webp" alt="img" class="smart-item-img">
-                            Wheel
+                            Roda
                         </button>
                         <button class="smart-item">
                             <img src="./img/menu/vipclub.webp" alt="img" class="smart-item-img">
-                            VIP club
+                            Clube VIP
                         </button>
                         <button class="smart-item">
                             <img src="./img/menu/promotions.webp" alt="img" class="smart-item-img">
-                            Promotions
+                            Promoções
                         </button>
                     </div>
                     <div class="title-box">
@@ -150,7 +151,7 @@
                                     d="M6.343 4.938a1 1 0 0 1 0 1.415 8.003 8.003 0 0 0 0 11.317 1 1 0 1 1-1.415 1.414c-3.906-3.906-3.906-10.24 0-14.146a1 1 0 0 1 1.415 0m12.731 0c3.906 3.907 3.906 10.24 0 14.146a1 1 0 0 1-1.414-1.414 8.003 8.003 0 0 0 0-11.317 1 1 0 0 1 1.414-1.415M9.31 7.812a1 1 0 0 1 0 1.414 3.92 3.92 0 0 0 0 5.544 1 1 0 1 1-1.414 1.414 5.92 5.92 0 0 1 0-8.372 1 1 0 0 1 1.414 0m6.959 0a5.92 5.92 0 0 1 0 8.372 1 1 0 0 1-1.415-1.414 3.92 3.92 0 0 0 0-5.544 1 1 0 0 1 1.415-1.414m-4.187 2.77a1.5 1.5 0 1 1 0 3 1.5 1.5 0 0 1 0-3"
                                     fill="var(--current-color)"></path>
                             </svg>
-                            <p>Live Casino</p>
+                            <p>Casino Ao Vivo</p>
                         </div>
                         <div class="title-box__item">
                             <svg width="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg"
@@ -159,7 +160,7 @@
                                     d="M12 2C6.477 2 2 6.477 2 12s4.477 10 10 10 10-4.477 10-10S17.523 2 12 2M8.244 4.373l3.008 1.8v2.193l-2.791 2.028-2.044-.707-.587-3.534a8.5 8.5 0 0 1 2.414-1.78m-4.623 9.066 2.327-2.327 2.04.705L9.07 15.15l-.97 1.575-3.293-.194a8.45 8.45 0 0 1-1.186-3.092m6.909 6.934-1.184-2.809.963-1.567h3.372l.912 1.581-1.04 2.78a8.6 8.6 0 0 1-3.023.015m8.362-3.397-3.024-.19-.938-1.624 1.087-3.345 2.013-.696 2.312 2.52a8.5 8.5 0 0 1-1.45 3.335m-.72-10.82-.589 3.533-2.04.705-2.791-2.028V6.172l3.002-1.8a8.5 8.5 0 0 1 2.418 1.784"
                                     fill="var(--current-color)"></path>
                             </svg>
-                            <p>Sports</p>
+                            <p>Desportos</p>
                         </div>
                         <div class="title-box__item">
                             <svg width="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg"
@@ -176,11 +177,13 @@
                                 <path
                                     d="M12 18.75a.75.75 0 1 0 0 1.5.75.75 0 0 0 0-1.5m5.5-8.5v-1a5.5 5.5 0 1 0-11 0v1H9a1 1 0 0 1 1 1v4a1 1 0 0 1-1 1H6.5v.25a2.25 2.25 0 0 0 2.096 2.245l.154.005h1.128a2.251 2.251 0 1 1 0 1.5H8.75a3.75 3.75 0 0 1-3.745-3.55L5 16.5V9.25a7 7 0 0 1 14 0v5a2 2 0 0 1-1.85 1.994l-.15.006h-2a1 1 0 0 1-.993-.883L14 15.25v-4a1 1 0 0 1 .883-.993L15 10.25zm-9 1.5h-2v3h2zm9 0h-2v3H17a.5.5 0 0 0 .492-.41l.008-.09z"
                                     fill="white"></path>
-                            </svg>Support
+                            </svg>
+                            Apoio
                         </button>
-                    </div>
                 </nav>
             </div>
+            </nav>
+        </div>
         </div>
     </aside>
     <main>
@@ -194,7 +197,7 @@
                     <span class="banner__box-title">Πακέτο Καλωσορίσματος</span>
                     <span class="banner__box-h1">€2,000 + <strong>300 Δωρεάν Περιστροφές</strong></span>
                     <div class="banner__box-btn">
-                        <a href="/go"><button class="banner-btn">Sign Up Now</button></a>
+                        <a href="/go"><button class="banner-btn">Registar Agora</button></a>
                     </div>
                 </div>
             </section>
@@ -206,7 +209,7 @@
                         d="M20.8238 21.008C20.8238 21.008 21.4161 20.8714 21.4922 20.5568L22.9054 8.75082L22.9778 8.14614C23.037 7.90332 22.9449 7.64806 22.7457 7.50359C22.5454 7.3585 22.2805 7.35494 22.0791 7.4947L18.7348 9.78825C18.6047 9.87771 18.5143 10.0162 18.4838 10.1744C18.4533 10.3319 18.4849 10.4959 18.5713 10.6298C18.7658 10.9295 18.8689 11.2777 18.8689 11.6377C18.8689 12.6409 18.0756 13.457 17.1004 13.457C16.1252 13.457 15.3319 12.6409 15.3319 11.6377C15.3319 11.0479 15.6145 10.4918 16.0883 10.1495C16.3549 9.95767 16.4194 9.57981 16.2328 9.30562L13.4568 5.22596C13.2357 4.90141 12.7118 4.90141 12.4907 5.22596L9.71472 9.30562C9.52822 9.57981 9.59267 9.95767 9.8592 10.1495C10.333 10.4918 10.6157 11.0479 10.6157 11.6377C10.6157 12.6409 9.82237 13.457 8.84714 13.457C7.87192 13.457 7.07861 12.6409 7.07861 11.6377C7.07861 11.2776 7.18168 10.9294 7.37628 10.6298C7.46262 10.496 7.49428 10.3319 7.46375 10.1744C7.43322 10.0162 7.34283 9.87771 7.21274 9.78825L3.86848 7.4947C3.66585 7.35494 3.40044 7.3585 3.2018 7.50359C3.00263 7.64806 2.91051 7.90332 2.96978 8.14614L4.45529 20.5568C4.52955 20.8636 4.82377 21.0637 5.12369 21.008H20.8238Z"
                         fill="#F6DA24" />
                 </svg>
-                <div class="atr__welcome-info">welcome bonus</div>
+                <div class="atr__welcome-info">bónus de boas-vindas</div>
                 <svg width="25" height="26" viewBox="0 0 25 26" fill="none" xmlns="http://www.w3.org/2000/svg">
                     <path fill-rule="evenodd" clip-rule="evenodd"
                         d="M20.8238 21.008C20.8238 21.008 21.4161 20.8714 21.4922 20.5568L22.9054 8.75082L22.9778 8.14614C23.037 7.90332 22.9449 7.64806 22.7457 7.50359C22.5454 7.3585 22.2805 7.35494 22.0791 7.4947L18.7348 9.78825C18.6047 9.87771 18.5143 10.0162 18.4838 10.1744C18.4533 10.3319 18.4849 10.4959 18.5713 10.6298C18.7658 10.9295 18.8689 11.2777 18.8689 11.6377C18.8689 12.6409 18.0756 13.457 17.1004 13.457C16.1252 13.457 15.3319 12.6409 15.3319 11.6377C15.3319 11.0479 15.6145 10.4918 16.0883 10.1495C16.3549 9.95767 16.4194 9.57981 16.2328 9.30562L13.4568 5.22596C13.2357 4.90141 12.7118 4.90141 12.4907 5.22596L9.71472 9.30562C9.52822 9.57981 9.59267 9.95767 9.8592 10.1495C10.333 10.4918 10.6157 11.0479 10.6157 11.6377C10.6157 12.6409 9.82237 13.457 8.84714 13.457C7.87192 13.457 7.07861 12.6409 7.07861 11.6377C7.07861 11.2776 7.18168 10.9294 7.37628 10.6298C7.46262 10.496 7.49428 10.3319 7.46375 10.1744C7.43322 10.0162 7.34283 9.87771 7.21274 9.78825L3.86848 7.4947C3.66585 7.35494 3.40044 7.3585 3.2018 7.50359C3.00263 7.64806 2.91051 7.90332 2.96978 8.14614L4.45529 20.5568C4.52955 20.8636 4.82377 21.0637 5.12369 21.008H20.8238Z"
@@ -215,53 +218,53 @@
             </div>
         </section>
         <section class="slot">
-            <h2 class="slot__title">Popular Games</h2>
+            <h2 class="slot__title">Jogos Populares</h2>
             <div class="slot__box">
                 <div class="slot__items">
                     <div class="slot__item">
                             <img src="./img/slot/1.webp"  alt="img" class="slot__item-img">
-                            <a href="/go"><button class="btn-overlay">Play Now</button></a>
+                            <a href="/go"><button class="btn-overlay">Jogar Agora</button></a>
                     </div>
                     <div class="slot__item">
                             <img src="./img/slot/2.webp"  alt="img" class="slot__item-img">
-                            <a href="/go"><button class="btn-overlay">Play Now</button></a>
+                            <a href="/go"><button class="btn-overlay">Jogar Agora</button></a>
                     </div>
                     <div class="slot__item">
                             <img src="./img/slot/3.webp"  alt="img" class="slot__item-img">
-                            <a href="/go"><button class="btn-overlay">Play Now</button></a>
+                            <a href="/go"><button class="btn-overlay">Jogar Agora</button></a>
                     </div>
                     <div class="slot__item">
                             <img src="./img/slot/4.webp"  alt="img" class="slot__item-img">
-                            <a href="/go"><button class="btn-overlay">Play Now</button></a>
+                            <a href="/go"><button class="btn-overlay">Jogar Agora</button></a>
                     </div>
                     <div class="slot__item">
                             <img src="./img/slot/5.webp"  alt="img" class="slot__item-img">
-                            <a href="/go"><button class="btn-overlay">Play Now</button></a>
+                            <a href="/go"><button class="btn-overlay">Jogar Agora</button></a>
                     </div>
                     <div class="slot__item">
                             <img src="./img/slot/1/1.webp"  alt="img" class="slot__item-img">
-                            <a href="/go"><button class="btn-overlay">Play Now</button></a>
+                            <a href="/go"><button class="btn-overlay">Jogar Agora</button></a>
                     </div>
                     <div class="slot__item">
                         <img src="./img/slot/1/2.webp"  alt="img" class="slot__item-img">
-                        <a href="/go"><button class="btn-overlay">Play Now</button></a>
+                        <a href="/go"><button class="btn-overlay">Jogar Agora</button></a>
                     </div>
                     <div class="slot__item">
                         <img src="./img/slot/1/3.webp"  alt="img" class="slot__item-img">
-                        <a href="/go"><button class="btn-overlay">Play Now</button></a>
+                        <a href="/go"><button class="btn-overlay">Jogar Agora</button></a>
                     </div>
                     <div class="slot__item">
                         <img src="./img/slot/1/4.webp"  alt="img" class="slot__item-img">
-                        <a href="/go"><button class="btn-overlay">Play Now</button></a>
+                        <a href="/go"><button class="btn-overlay">Jogar Agora</button></a>
                     </div>
                     <div class="slot__item">
                         <img src="./img/slot/1/5.webp"  alt="img" class="slot__item-img">
-                        <a href="/go"><button class="btn-overlay">Play Now</button></a>
+                        <a href="/go"><button class="btn-overlay">Jogar Agora</button></a>
                     </div>
                 </div>
             </div>
             <div class="banner__box-btn ">
-                <button class="banner-btn slot-btn btn">Sign Up</button>
+                <button class="banner-btn slot-btn btn">Registar Agora</button>
             </div>
         </section>
         <div class="wrapper-section">
@@ -387,9 +390,8 @@
                     <h2>Συμπεράσματα 🚀✨</h2>
                     <p>Το Wintopia Casino λάμπει λαμπρά στο ζωντανό σύμπαν των online τυχερών παιχνιδιών, προσφέροντας μια ευρεία γκάμα παιχνιδιών, γενναιόδωρα μπόνους και μια ευχάριστη διεπαφή 🌟🎰. Η δέσμευση της πλατφόρμας για ασφάλεια, δικαιοσύνη και υποστήριξη ενισχύει ένα υψηλό επίπεδο εμπιστοσύνης και αφοσίωσης μεταξύ των Ελλήνων παικτών 🛡️💖. Παρόλο που υπάρχουν τομείς προς βελτίωση, η συνολική ποιότητα της πλατφόρμας την επιβεβαιώνει ως μια αστρική επιλογή για όποιον στην Ελλάδα αναζητά εξαιρετική ψυχαγωγία με κορυφαίες ανταμοιβές. Εγγραφείτε τώρα και ξεκινήστε μια κοσμική περιπέτεια!</p>
                     <div class="banner__box-btn ">
-                        <button class="banner-btn btn">Play Now</button>
+                        <button class="banner-btn btn">Jogar Agora</button>
                     </div>
-                </div>
             </section>
         </div>
         <section class="faq">
@@ -436,10 +438,10 @@
                <img src="img/logo.svg" alt="logo">
             </div>
             <div class="footer-link">
-                <a href="/go">Promotions</a>
-                <a href="/go">Responsible Gaming</a>
-                <a href="/go">Terms of servise</a>
-                <a href="/go">Privacy policy</a>
+                <a href="/go">Promoções</a>
+                <a href="/go">Jogo Responsável</a>
+                <a href="/go">Termos de Serviço</a>
+                <a href="/go">Política de Privacidade</a>
             </div>
         </div>
         <hr>
@@ -497,12 +499,11 @@
                 </div>
             </div>
             <div class="footer__top-copy">
-                <div class="copy">© 2024 Wintopia Casino | All Rights Reserved</div>
+                <div class="copy">© 2024 Wintopia Casino | Todos os Direitos Reservados</div>
             </div>
         </div>
     </footer>
 
-    [[LIST_METRIKA]]
     <script src="js/script.js"></script>
 
 </body>
