--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                     href="/go">Play Now</a></button>
             <button class="btn-log"><a href="/go">Log In</a></button>
             <button class="btn-sign"><a href="/go">Sign Up</a></button>
-            <button class="toggle"><img src="img/EN.webp" alt="img" width="34px" height="34px" class="lang">English</button>
+            <button class="toggle"><img src="img/lang/UK.webp" alt="img" width="34px" height="34px" class="lang">English</button>
         </div>
         <div class="lang-items">
             <ul class="lang-item">
