--- a/FR.html
+++ b/FR.html
@@ -53,7 +53,7 @@
                     href="/go">Jouer maintenant</a></button>
             <button class="btn-log"><a href="/go">Connexion</a></button>
             <button class="btn-sign"><a href="/go">Inscription</a></button>
-            <button class="toggle"><img src="img/EN.webp" alt="img" width="34px" height="34px" class="lang">Français</button>
+            <button class="toggle"><img src="img/lang/FR.webp" alt="img" width="34px" height="34px" class="lang">Français</button>
         </div>
         <div class="lang-items">
             <ul class="lang-item">
