--- a/PT.html
+++ b/PT.html
@@ -58,10 +58,9 @@
         </div>
         <div class="lang-items">
             <ul class="lang-item">
-                <li><a href="index.html">English</a></li>
-                <li><a href="GR.html">Ελληνική</a></li>
-                <!-- <li><a href="PT.html"><img src="./img/en_CA.png" alt="En" width="20px">Português</a></li> -->
-                <li><a href="FR.html">Français</a></li>
+                <li><img src="img/lang/UK.webp" alt="img" width="20px" height="20px" class="lang-i"><a href="index.html">English</a></li>
+                <li><img src="img/lang/GR.webp" alt="img" width="20px" height="20px" class="lang-i"><a href="GR.html">Ελληνική</a></li>
+                <li><img src="img/lang/FR.webp" alt="img" width="20px" height="20px" class="lang-i"><a href="FR.html">Français</a></li>
             </ul>
         </div>
     </header>
