--- a/PT.html
+++ b/PT.html
@@ -2,7 +2,7 @@
 <html lang="pt">
 
 <head>
-    <title>Wintopia</title>
+    <title>Sushi Casino</title>
     <meta charset="UTF-8">
     <meta name="description" content=" 100% έως και €700 στην πρώτη σας κατάθεσ" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
