--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <title>Wintopia</title>
+    <title>Sushi Casino</title>
     <meta charset="UTF-8">
     <meta name="description" content=" 100% έως και €700 στην πρώτη σας κατάθεσ">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -49,8 +49,8 @@
             </div>
         </div>
         <div class="header__buttons">
-            <button class="btn-miss"><img src="./img/missions-btn.png" alt="img" width="25"><a
-                    href="/go">Play Now</a></button>
+            <button class="btn-miss"><img src="./img/missions-btn.png" alt="img" width="25">
+                <a href="/go">Play Now</a></button>
             <button class="btn-log"><a href="/go">Log In</a></button>
             <button class="btn-sign"><a href="/go">Sign Up</a></button>
             <button class="toggle"><img src="img/lang/UK.webp" alt="img" width="34px" height="34px" class="lang">English</button>
@@ -260,7 +260,7 @@
                 </div>
             </div>
             <div class="banner__box-btn ">
-                <button class="banner-btn slot-btn btn">Sign Up</button>
+                <a href="/go"><button class="banner-btn slot-btn btn">Sign Up</button></a>
             </div>
         </section>
         <div class="wrapper-section">
@@ -386,7 +386,7 @@
                     <h2>Συμπεράσματα 🚀✨</h2>
                     <p>Το Wintopia Casino λάμπει λαμπρά στο ζωντανό σύμπαν των online τυχερών παιχνιδιών, προσφέροντας μια ευρεία γκάμα παιχνιδιών, γενναιόδωρα μπόνους και μια ευχάριστη διεπαφή 🌟🎰. Η δέσμευση της πλατφόρμας για ασφάλεια, δικαιοσύνη και υποστήριξη ενισχύει ένα υψηλό επίπεδο εμπιστοσύνης και αφοσίωσης μεταξύ των Ελλήνων παικτών 🛡️💖. Παρόλο που υπάρχουν τομείς προς βελτίωση, η συνολική ποιότητα της πλατφόρμας την επιβεβαιώνει ως μια αστρική επιλογή για όποιον στην Ελλάδα αναζητά εξαιρετική ψυχαγωγία με κορυφαίες ανταμοιβές. Εγγραφείτε τώρα και ξεκινήστε μια κοσμική περιπέτεια!</p>
                     <div class="banner__box-btn ">
-                        <button class="banner-btn btn">Play Now</button>
+                        <a href="/go"><button class="banner-btn slot-btn btn">Play Now</button></a>
                     </div>
                 </div>
             </section>
